--- a/question2.html
+++ b/question2.html
@@ -6,6 +6,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="question2_style.css">
     <script src="question2.js" defer></script>
+    <title>문제2</title>
+</head>
+<body>
+    <div class="layer">
+        <ul>
+            <li class="doneStep">🏫</li>
+            <li class="nowStep"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <h4 class="info">하교 후 친구들과 들린 든킨도나쓰<br>블루베리스무디가 먹고 싶다!</h4>
+        <section class="questionContainer">
+            <div class="questionTri"></div>
+            <div class="questionBox">
+                <span class="questiohBox_text text"></span>
+                <img class="meme" src="" alt="meme">
+            </div>
+        </section>
+        <section class="speechContainer">
+            <div class="speechTri"></div>
+            <div class="speechBox">
+                <div class="text_box">
+                    <span class="speechBox_text text">녹음 버튼을 눌러 다음의 말을 녹음하시오<br><strong id="strong">블루베리스무디 하나 주이소</strong></span>
+                </div>
+            </div>
+        </section>
+        <button class="recordBtn">
+            <img class="mic_icon" src="image/mic_icon.png" alt="micIcon">
+        </button>
+        <section class="modal_wrap">
+            <div class="modal">
+                <div class="loading bar">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div id="dif"></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div id="dif"></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div id="dif"></div>
+                    <div></div>
+                    <div></div>
+                    <div id="dif"></div>
+                    <div></div>
+                    <div></div>
+                    <div id="dif"></div>
+                    <div></div>
+                    <div></div>
+                    <div id="dif"></div>
+                    <div></div>
+                    <div id="dif"></div>
+                    <div></div>
+                    <div></div>
+                    <div id="dif"></div>
+                    <div></div>
+                    <div id="dif"></div>
+                    <div></div>
+                </div>
+                <span class="time">00:04</span>
+                <div class="button_wrap">
+                    <audio></audio>
+                    <button class="playBtn"><img class="playBtn_icon" src="image/play_icon.png" alt="playBtn"></button>
+                    <button class="stopBtn"><img class="stop_icon" src="image/stop_icon.png"/></button>
+                    <button class="submitBtn" type="submit">확인</button>
+                </div>
+            </div>
+        </section>
+    </div>
+</body>
+</html>
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="question2_style.css">
+    <script src="question2.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -43,4 +126,4 @@
         </div>
     </div>
 </body>
-</html>
+</html> -->
