--- a/question2.html
+++ b/question2.html
@@ -76,7 +76,7 @@
                         <audio preload="metadata"></audio>
                         <button class="playBtn"><img class="playBtn_icon" src="image/play_icon.png" alt="playBtn"></button>
                         <button class="stopBtn"><img class="stop_icon" src="image/stop_icon.png"/></button>
-                        <button class="submitBtn" type="submit">확인</button>
+                        <button class="submitBtn" type="submit"><a href="ending.html">확인</a></button>
                     </div>
                 </div>
             </section>
